# xdog

./: CMakeLists.txt  build.bat  build.sh  version.h.in
cmake/: SetupCPack.cmake  SetupCUDA.cmake
gpu/: CMakeLists.txt  basic_image.h  cpu_image.h  cpu_sampler.h  gpu_bilateral.cu  gpu_bilateral.h  gpu_binder.h  gpu_blend.cu  gpu_blend.h  gpu_cache.cpp  gpu_cache.h  gpu_color.cu  gpu_color.h  gpu_convert.cu  gpu_convert.h  gpu_dog.cu  gpu_dog.h  gpu_dog2.cu  gpu_dog2.h  gpu_error.cpp  gpu_error.h  gpu_etf.cu  gpu_etf.h  gpu_gauss.cu  gpu_gauss.h  gpu_grad.cu  gpu_grad.h  gpu_image.cu  gpu_image.h  gpu_math.h  gpu_minmax.cu  gpu_minmax.h  gpu_noise.cu  gpu_noise.h  gpu_oabf.cu  gpu_oabf.h  gpu_plm2.h  gpu_sampler.h  gpu_shuffle.cu  gpu_shuffle.h  (+11 more)
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stable.cpp  stable.h  xdog-demo.icns  xdog-demo.rc
util/: CMakeLists.txt  cudadevicedialog.cpp  cudadevicedialog.h  cudadevicedialog.ui  fancystyle.cpp  fancystyle.h  imageutil.cpp  imageutil.h  imageview.cpp  imageview.h  logwindow.cpp  logwindow.h  param.cpp  param.h  paramui.cpp  paramui.h  rolloutbox.cpp  rolloutbox.h  settingscheck.cpp  settingscheck.h  stable.h  videocontrols.cpp  videocontrols.h  videoplayer.cpp  videoplayer.h
